Closed
Bug 93056
Opened 25 years ago
Closed 24 years ago
windowless plugins don't draw in the correct place when scrolled
Categories
(Core Graveyard :: Plug-ins, defect, P1)
Core Graveyard
Plug-ins
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.4
People
(Reporter: mozilla, Assigned: peterlubczynski-bugs)
References
Details
(Keywords: topembed, Whiteboard: [verified-on-trunk][verified-on-branch])
Attachments
(3 files)
|
31.49 KB,
image/gif
|
Details | |
|
1.69 KB,
patch
|
Details | Diff | Splinter Review | |
|
8.17 KB,
application/octet-stream
|
Details |
From Bugzilla Helper:
User-Agent: Mozilla/4.0 (compatible; MSIE 6.0b; Windows NT 5.0)
BuildID:
When the window in which a windowless plugin is scrolled then the plugin
redraws in the wrong place. It looks like the coordinates that are passed into
the plugin through the nsPluginWindow parameter to SetWindow do not take
account of the scroll offset. I suspect that this is what is being referred to
in the code here:
http://lxr.mozilla.org/mozilla/source/layout/html/base/src/nsObjectFrame.cpp#134
6
Reproducible: Always
Steps to Reproduce:
1. Install the windowless plugin attached to bug 44322
2. Open the windowless test page attached to the same bug.
2. Reduce the size of the window until scroll bars are display.
3. Click "Move the fish"
4. Scroll down the page
Actual Results: The plugin (green rectangular window) no longer draws in the
same place with respect to the vertical bars on the page.
Expected Results: Draw the plugin in the same place with respect to the
vertical bars.
| Assignee | ||
Comment 1•25 years ago
|
||
Hm.....this has always been a problem on Mac and we sort of cheated with
"fixing" up SetWindow() in the timer so it looks fine after a scroll. This is
related to bug 90574.
Assignee: av → peterlubczynski
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 2•25 years ago
|
||
David,
Can you attach a screen shot of the problem? I keep seeing the "expected
results" in that the plugin moves with the page. I'm using 0.9.2-20010727 on W2K.
| Reporter | ||
Comment 3•25 years ago
|
||
| Reporter | ||
Comment 4•25 years ago
|
||
The attached screenshot was from the 0.9.2 release (2001062815). I have also
tried it with a recent nightly build of 0.9.2 (2001072622). And with a recent
CVS pull of the trunk (a couple of weeks ago I think).
| Reporter | ||
Comment 5•25 years ago
|
||
Comment 6•25 years ago
|
||
anticipating that some plugin vendors are going to need this
Keywords: topembed
| Assignee | ||
Comment 7•25 years ago
|
||
looks good to me r=peterl
| Assignee | ||
Comment 8•24 years ago
|
||
Updaing status....this is currently slated as a branch candidate.
Status: NEW → ASSIGNED
Priority: -- → P1
Whiteboard: [seeking super review]
Target Milestone: --- → mozilla0.9.4
Comment 9•24 years ago
|
||
sr=waterson
| Assignee | ||
Comment 10•24 years ago
|
||
Fix on the trunk, do I need a plus to check in on the branch?
Whiteboard: [seeking super review] → [fixed-on-trunk]
| Assignee | ||
Comment 11•24 years ago
|
||
*** Bug 93500 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 12•24 years ago
|
||
This is a bug that Viewpoint will want fixed (dup of 93500). Nominating
topembed, nsbranch, looking for a '+'.
Comment 13•24 years ago
|
||
In addition, I'm nominating this nsenterprise for enterprise client check ins.
Keywords: nsenterprise
Comment 14•24 years ago
|
||
I need help in verifying this bug on win commercial trunk. I put the basic.dll
in plugins folder and tried the testcase. But it does not work. Does this need a
debug build to test ?
| Assignee | ||
Comment 15•24 years ago
|
||
Shrirang, by following the steps to reproduce you should be able to verify.
Comment 16•24 years ago
|
||
Since the two images mentioned in the source of the page fish.htm (fish1.gif,
fish2.gif) are missing in thie zipped version of the file, I see alt text.
However the behaviour seen is tha thte alt text draws exactly at the same place
with respect to he verticle bars. So I guess, this is fixed (0813 trunk NT).
changing status whiteboard to reflect this.
Whiteboard: [fixed-on-trunk][seeking approval] → [verified-on-trunk][seeking approval]
| Reporter | ||
Comment 17•24 years ago
|
||
Sorry for the lack of input, I've been on holiday.
Unfortunately, seeing the alt text does not verify that the fix has worked - in
this case the drawing is not being done by the plugin.
I think basic.dll should go in the components folder not the plugin folder as
it is a new style plugin.
Once I have got a clean copy of the trunk I'll try and verify the fix.
| Reporter | ||
Comment 18•24 years ago
|
||
| Reporter | ||
Comment 19•24 years ago
|
||
I have attached a zip file containing the test case that I originally intended
to be used. Sorry, for the confusion basic.dll was the wrong plugin to use.
Install npsimple.dll in the components directory and view the html file, both
are in the zip file.
I can verify that this bug is fixed with the latest trunk build - 2001081303 on
Windows 2000.
Comment 20•24 years ago
|
||
there doesn't seem to be anything espcially enterprisish about this bug.
removing that keyword
Keywords: nsenterprise
Comment 21•24 years ago
|
||
a=chofmann on the 0.9.2 branch. thanks
| Assignee | ||
Comment 22•24 years ago
|
||
Patch in branch, marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: [verified-on-trunk][seeking approval] → [verified-on-trunk]
Comment 23•24 years ago
|
||
verif patch is in branch.
Status: RESOLVED → VERIFIED
Whiteboard: [verified-on-trunk] → [verified-on-trunk][verified-on-branch]
Updated•4 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•