Fix for windowless plugins don't draw in the correct place when scrolled bug 93056 patch by dbrittain@superscape.com r=peterl sr=waterson